# uni-translate

./: CODING_STANDARDS.md  ERROR_HISTORY.md  architecture.md  bug_registry.md  build.bat  changelog.md  docs.md  memory.md  package-lock.json  package.json  spec.md  summary.md  tailwind.config.js  user_flow.md
.agents/rules/: api-conventions.md  clean-code.md  code-style.md  database.md  error-handling.md  git-workflow.md  monitoring.md  naming-conventions.md  project-structure.md  security.md  system-design.md  tech-stack.md  testing.md
.agents/workflows/: auto-commit.md
adr/: ADR-0001-sql-formatter-pipeline.md
docs/: PROJECT_CONTEXT.md
scratch/: debug_format.js  debug_normalize.js  final_check.js  final_validation_all.js  repro_issue.js  repro_issue.ts  test_format.js  test_format_final.js  test_format_v2.js  test_format_v4.js  test_format_v5.js  test_func_stack.js  test_function_format.js  test_insert_format.js  test_paren_level.js  test_regex.js  test_subquery.js  test_subquery_v2.js  test_unquote.js  test_user_example.js  test_user_example_v3.js  verify_format.js  verify_format.ts  verify_insert.js  verify_paren_indent.js
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json  test_output.txt  test_output_utf8.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  search.rs  sql_analyzer.rs  state.rs  storage.rs  test_type.rs
src-tauri/src/sql/: mod.rs  traits.rs
src-tauri/src/sql/dialects/: tsql.rs
src/lib/: errors.test.ts  (+21 more)
(+54 files in other folders)
